test/types/file/freadIntFailed.good
cwd /home/mppf/chapel/svn_ferguson/test/types/file abs /home/mppf/chapel/svn_ferguson/test/types/file/_test_freadIntFailed.txt rel _test_freadIntFailed.txt
freadIntFailed.chpl:2: error: Unhandled system error: Invalid argument (22) in file.reader with path _test_freadIntFailed.txt
