test/types/file/freadIntFailed.chpl
var myInt = 123;
var f = open("_test_freadIntFailed.txt", "w").reader();

f.read(myInt);
